--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,21 @@
+* {
+  box-sizing: border-box;
+}
 body {
   background-color: #621402;
   font-family: Roboto, sans-serif;
+  color: white;
 }
-.header {
+.navbar {
   display: flex;
   align-items: center;
   padding-top: 30px;
   padding-bottom: 30px;
+}
+header {
+  background: linear-gradient(180deg, rgba(98, 20, 2, 0.31) 0%, #621402 85.62%),
+    url("../img/bg.png") no-repeat center top / cover;
+  min-height: 100vh;
 }
 .container {
   max-width: 1170px;
@@ -36,4 +45,114 @@ body {
   height: 33px;
   width: 33px;
   border-radius: 50%;
+}
+.film {
+  color: white;
+  margin-top: 60px;
+  display: flex;
+  align-items: center;
+}
+.film-title-small {
+  opacity: 0.5;
+  font-size: 24px;
+  line-height: 150%;
+}
+.film-title {
+  font-size: 36px;
+  line-height: 42px;
+  margin-top: 11px;
+  margin-bottom: 23px;
+}
+.film-description {
+  font-size: 16px;
+  line-height: 150%;
+  max-width: 560px;
+}
+.film-trailer {
+  margin: auto;
+}
+.time {
+  display: flex;
+  align-items: center;
+}
+.time-icon {
+  margin-right: 14px;
+}
+.film-details {
+  margin-top: 35px;
+  margin-bottom: 64px;
+}
+.rating {
+  display: flex;
+  align-items: center;
+  margin-left: 34px;
+}
+.rating-icon {
+  margin-right: 14px;
+}
+.rating-current {
+  font-size: 24px;
+  line-height: 150%;
+}
+.film-details {
+  display: flex;
+  align-items: center;
+}
+.session {
+  padding-top: 46px;
+  padding-bottom: 64px;
+  border-top: 1px solid rgba(255, 255, 255, 0.5);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+  display: flex;
+  justify-content: space-between;
+}
+.session-label {
+  display: block;
+  margin-bottom: 20px;
+}
+.session-date-block {
+  display: flex;
+}
+.session-date-item {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  border-radius: 5px;
+  text-align: center;
+  width: 90px;
+  height: 90px;
+  justify-content: center;
+  margin-right: 15px;
+  transition: background-color 0.2s;
+  cursor: pointer;
+}
+.session-month {
+  font-size: 16px;
+  line-height: 19px;
+}
+.session-day {
+  font-weight: 900;
+  font-size: 30px;
+  line-height: 35px;
+}
+.session-week {
+  font-size: 19px;
+  line-height: 22px;
+}
+.session-date-item:hover {
+  background-color: #fe8e05;
+  color: #621402;
+}
+
+.select {
+  background: rgba(255, 255, 255, 0.15);
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  border-radius: 5px;
+  color: white;
+  padding: 18px;
+  cursor: pointer;
+  margin-top: 13px;
+}
+.select-cinema {
+  min-width: 470px;
 }
