--- a/css/style.css
+++ b/css/style.css
@@ -12,14 +12,23 @@ body {
   padding-top: 30px;
   padding-bottom: 30px;
 }
+.nav {
+  position: relative;
+}
+.m-menu {
+  display: none;
+}
+
 header {
   background: linear-gradient(180deg, rgba(98, 20, 2, 0.31) 0%, #621402 85.62%),
     url("../img/bg.png") no-repeat center top / cover;
-  min-height: 100vh;
+  padding-bottom: 60px;
 }
+
 .container {
   max-width: 1170px;
   margin: auto;
+  width: 90%;
 }
 .menu {
   list-style-type: none;
@@ -154,5 +163,157 @@ header {
   margin-top: 13px;
 }
 .select-cinema {
-  min-width: 470px;
+  width: 470px;
+}
+.scheme {
+  background: rgba(36, 36, 36, 0.18);
+  border-radius: 10px;
+}
+.scheme-svg {
+  max-width: 1170px;
+}
+.scheme path:not(.light) {
+  fill: rgba(255, 255, 255, 0.15);
+}
+.scheme path:not(.light):hover {
+  fill: rgba(255, 255, 255, 0.5);
+  cursor: pointer;
+}
+.scheme path.booked {
+  fill: rgba(255, 255, 255, 0.05);
+}
+
+.scheme path.booked:hover {
+  fill: rgba(255, 255, 255, 0.05);
+  cursor: not-allowed;
+}
+
+.legend {
+  display: flex;
+  align-items: center;
+  border-top: 1px solid rgba(255, 255, 255, 0.5);
+  max-width: 1018px;
+  width: 100%;
+  margin: auto;
+  padding-top: 22px;
+  padding-bottom: 38px;
+  margin-bottom: 60px;
+}
+.legend-label {
+  display: flex;
+  align-items: center;
+  margin-right: 30px;
+  color: rgba(255, 255, 255, 0.5);
+}
+.scheme path.active,
+.scheme path.active:hover {
+  fill: #fe8e05;
+}
+.legend svg {
+  margin-right: 15px;
+}
+.price {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 30px;
+}
+.price-label {
+  display: block;
+  font-size: 18px;
+  line-height: 21px;
+  margin-bottom: 12px;
+}
+.price-tag {
+  font-size: 52px;
+  line-height: 61px;
+}
+.button {
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 21px;
+  color: #ffffff;
+  text-decoration: none;
+  background: #fe8e05;
+  border-radius: 5px;
+  padding: 24px 52px;
+}
+
+@media (max-width: 1200px) {
+  .container {
+    max-width: 960px;
+    margin: auto;
+  }
+  .select-cinema {
+    width: 100%;
+  }
+}
+
+@media (max-width: 1000px) {
+  .container {
+    max-width: 750px;
+  }
+  .session {
+    flex-wrap: wrap;
+  }
+  .session-date {
+    flex-basis: 70%;
+    margin-bottom: 40px;
+  }
+  .session-time {
+    order: 2;
+  }
+  .session-cinema {
+    order: 3;
+  }
+  .menu-item {
+    margin-right: 20px;
+  }
+}
+@media (max-width: 800px) {
+  .container {
+    max-width: 550px;
+  }
+  .menu {
+    position: absolute;
+    left: 0;
+    top: 40px;
+    padding: 20px;
+    margin-left: 20px;
+    flex-direction: column;
+    background-color: #621402;
+    z-index: 9;
+    border-radius: 10px;
+    opacity: 0;
+    visibility: hidden;
+    transform: translateY(-20%);
+    transition: opacity 0.5s, transform 0.5s;
+  }
+  .menu-item:not(:last-child) {
+    padding-bottom: 10px;
+  }
+  .m-menu {
+    background-color: transparent;
+    border: none;
+    width: 40px;
+    height: 40px;
+    margin-left: 10px;
+    cursor: pointer;
+    display: block;
+  }
+  .is-open {
+    opacity: 1;
+    visibility: visible;
+    transform: translateY(0);
+  }
+
+  .film {
+    flex-direction: column;
+  }
+
+  .film-trailer {
+    margin-right: auto;
+    margin-left: 0;
+    padding-bottom: 50px;
+  }
 }
